<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@color/white">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="60dp"
            app:srcCompat="@drawable/ic_nike_logo"
            app:tint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/loginScreenTitle"
            android:textColor="@color/black"
            android:textAppearance="?textAppearanceHeadline5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.8"
            android:layout_marginTop="8dp"
            android:textAppearance="?textAppearanceBody1"
            android:text="@string/authHint"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="right|center_vertical"
            android:textColor="@color/black"
            android:textColorHint="@color/darkGray"
            android:inputType="textEmailAddress"
            android:background="@drawable/bg_auth_edt"
            android:minHeight="48dp"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="270dp"
            android:textColor="@color/black"
            android:textColorHint="@color/darkGray"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="right|center_vertical"
            android:inputType="textPassword"
            android:background="@drawable/bg_auth_edt"
            android:minHeight="48dp"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"
            android:hint="@string/password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/loginTitle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.4"
            android:textAppearance="?textAppearanceBody1"
            android:text="@string/signUpHint"
            android:textColor="@color/black"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signup_page"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/primary_bold"
            android:text="@string/signUp" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>