<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:id="@+id/parent"
    android:background="@drawable/bg_add_comment_dialog">

    <EditText
        android:id="@+id/commentTitleEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right|center_vertical"
        android:textColor="@color/black"
        android:textColorHint="@color/darkGray"
        android:textSize="14sp"
        android:background="@drawable/bg_auth_edt"
        android:minHeight="48dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:hint="@string/commentTitle" />

    <EditText
        android:id="@+id/commentContentEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:textColor="@color/black"
        android:textColorHint="@color/darkGray"
        android:background="@drawable/bg_auth_edt"
        android:minHeight="150dp"
        android:padding="16dp"
        android:textSize="14sp"
        android:hint="@string/commentContent"
        android:layout_marginTop="16dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="56dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/submitComment" />

</LinearLayout>