<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentActivity"
    android:layoutDirection="rtl"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/commentListToolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/white"
        android:gravity="center_vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingRight="16dp">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_back"
                app:tint="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"

                android:layout_marginRight="12dp"
                android:layout_toLeftOf="@+id/btn_back"
                android:text="@string/paymentAndShiping"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_lay_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/darkGray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:text="امیر"
                    android:textColor="@color/blue"
                    android:textColorHint="@color/darkGray"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="@color/darkGray"
                android:layout_below="@+id/edt_lay_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_family"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/family"
                    android:text="تشکری"
                    android:textColor="@color/blue"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="@color/darkGray"
                android:layout_below="@+id/edt_lay_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_postal_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/postalCode"
                    android:text="1234567890"
                    android:textColor="@color/blue"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="@color/darkGray"
                android:layout_below="@+id/edt_lay_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:text="09924480561"
                    android:textColor="@color/blue"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="@color/darkGray"
                android:layout_below="@+id/edt_lay_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="آدرس"
                    android:text="24 متری انقلاب ، انقلاب 27"
                    android:textColor="@color/blue"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:paddingRight="12dp"
                android:paddingLeft="12dp"
                android:paddingTop="8dp"
                android:paddingBottom="12dp"
                android:background="@drawable/bg_receipt_info">

                <TextView
                    android:id="@+id/txt_price_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/purchaseDetail"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/totalPrice"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/txt_price_info"/>

                <TextView
                    android:id="@+id/txt_total_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0 تومان"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="left"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/txt_price_info"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/gray"
                    android:layout_below="@+id/txt_total_price"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shippingCost"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/txt_total_price"/>

                <TextView
                    android:id="@+id/txt_shiping_cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0 تومان"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/txt_total_price"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/gray"
                    android:layout_below="@+id/txt_shiping_cost"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/payablePrice"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/txt_shiping_cost"/>

                <TextView
                    android:id="@+id/txt_payable_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0 تومان"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/txt_shiping_cost"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="32dp"
                android:layout_gravity="center_horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_cash_on_delivery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/cashOnDelivery"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_online_payment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/onlinePayment"
                    />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>



</androidx.coordinatorlayout.widget.CoordinatorLayout>