<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.ProfileFragment"
    android:layoutDirection="rtl"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/commentListToolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/white"
        android:gravity="center_vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingRight="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/profile"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textSize="14sp" />

        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/animation_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:visibility="gone"
        android:padding="16dp">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie"
            android:layout_width="350dp"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/login_anim"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/txt_empty_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:text="@string/youShouldLogin"
            android:textSize="14sp"
            android:textAppearance="@style/TextAppearance.MyTheme.Headline6"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:gravity="center"
            android:backgroundTint="@color/blue"
            android:text="@string/Login"
            android:layout_marginTop="32dp"
            android:visibility="visible"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/cart_item_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:orientation="vertical"
        android:visibility="visible">

        <androidx.cardview.widget.CardView
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:cardCornerRadius="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="24dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/profile_img"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:text="Amir Tashakkori"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="16dp"
            android:layout_marginTop="48dp">

            <RelativeLayout
                android:id="@+id/btn_logOut"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:padding="12dp">

                <ImageView
                    android:id="@+id/img1"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_logout"
                    app:tint="@color/navyBlue"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    android:text="@string/logOut"
                    android:layout_gravity="center_horizontal"
                    android:layout_below="@+id/img1"
                    android:layout_marginTop="8dp"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_purchase_history"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:padding="12dp">

                <ImageView
                    android:id="@+id/img2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_history"
                    app:tint="@color/green"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    android:text="@string/purchaseHistory"
                    android:layout_gravity="center_horizontal"
                    android:layout_below="@+id/img2"
                    android:layout_marginTop="8dp"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_favorite_List"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:padding="12dp">

                <ImageView
                    android:id="@+id/img3"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_favorite_full"
                    app:tint="@color/red"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    android:text="@string/favoriteList"
                    android:layout_gravity="center_horizontal"
                    android:layout_below="@+id/img3"
                    android:layout_marginTop="8dp"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>

        </LinearLayout>


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>